# crewai-course

1_Research_Analyst/: agent.py  app.py  main.py  pyproject.toml  research_blog.md
2Crewai_Researcher/research_crew/: pyproject.toml  report.md
2Crewai_Researcher/research_crew/src/research_crew/: crew.py  main.py
3Trip_planner/: clientCliApp.py  clientstreamlitApp.py  fastAPiTripPlannerAgent.py  main.py  pyproject.toml  report.md  tripPlanTask.py  tripPlannerAgent.py
3Trip_planner/Tools/: browserLessTools.py  searchTools.py
4RagAgent/: deepseek_crew_agent.py  llama_crew_agent.py.py  main.py  pyproject.toml
4RagAgent/src/ragAgent/: crew.py  main.py
4RagAgent/src/ragAgent/config/: tasks.yaml
4RagAgent/src/ragAgent/tools/: rag_custom_tool.py
5flowpoem/: README.md  pyproject.toml
5flowpoem/src/flowpoem/: main.py  poem.txt
6ScientistAgent/: main.py  pyproject.toml
6ScientistAgent/src/: main.py
6ScientistAgent/src/output/: guide_outline.json
6ScientistAgent/src/researcher_content/crews/content_crew/: content_crew.py
6ScientistAgent/src/researcher_content/crews/content_crew/config/: agent.yaml  tasks.yaml
