[project]
name = "6scientistagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.2.0",
    "crewai-tools>=1.2.0",
    "fastapi>=0.109.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=0.0.5",
    "mem0ai>=1.0.0",
    "openai>=1.6.1",
    "pydantic>=2.10",
    "pyowm>=3.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.29.0",
    "tools>=0.1.9",
    "unstructured>=0.11.0",
    "uvicorn>=0.27.0",
]
